clusters/default/uptime-kuma/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: uptime
  namespace: uptime-kuma
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`uptime.__BASE-DOMAIN__`)
      kind: Rule
      services:
        - name: uptime-kuma
          port: 3001
